--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,12 @@
-html, body, h1 ,h2, h3, div, p , ul, footer {
+html, body, h1 ,h2, h3, div, p , ul, li, footer, main {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 html, body{
     height: 100%;
     
-}
-label {
-    display: block;
-    
-}
-
-progress {
-    margin-bottom: 10px;
-    border: 1px solid #85bcc1;
 }
 
 li {
@@ -25,6 +18,8 @@ a{
     text-decoration: none;
 }
 
+/*START*/
+
 body {
     background-color:  #fbe06d;
     font-family: 'Inter', sans-serif;
@@ -35,15 +30,23 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    
-    
 }
 .container{
     max-width: 1020px;
     padding: 0 10px;
     margin: 0 auto;
-    
+}
 
+.dot{
+    width: 10px;
+    height: 10px;
+    background-color: #85bcc1;
+    border-radius: 50%;
+}
+
+.dot_white_color{
+    background-color: white;
+    border: 1px solid #85bcc1;
 }
 
 .header{
@@ -51,15 +54,17 @@ body {
     background-color: #85bcc1;
 }
 
-
+.main {
+    min-height: 100%;
+    flex-grow: 1;
+    
+}
 
 .menu__list{
     display: flex;
-    
-    height: 50px;
+    height: 40px;
     justify-content: space-between;
     align-items: center;
-    
 }
 
 .menu__link{
@@ -76,21 +81,22 @@ body {
     border-radius:0 20px 20px 0;
     
 }
-
+.main__info{
+    margin-top: 20px;
+}
 .info{
+    height: 100%;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 30px;
-    background-image:url(/images/bg.png);
-    flex-grow: 1;
+    background-image:url(../images/content/bg.png);  
     border-radius: 10px;
 }
 
 .info__img{
     grid-row: 1/3;
-    
     border-radius: 30px;
 }
 
@@ -99,10 +105,11 @@ body {
     font-size: 36px;
     color: #85bcc1;
     margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 .info__prof{
-    font-size: 16px;
+    text-transform: uppercase;
     color: white;
     padding: 10px;
     display: inline-block;
@@ -119,7 +126,7 @@ body {
 }
 
 .education__title, .exp__title, .languages__title, .skills__title, .contacts__title {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 
@@ -129,18 +136,54 @@ body {
     color: #85bcc1;
 
 }
+.languages__box{
+    display: flex;
+    padding: 5px;
+    gap: 0 20px;
+}
+.languages__subtitle{
+    width: 70px;
+}
+.languages__dot-box{
+    display: flex;
+    gap: 0 5px;
+    position: relative;
+    top: 3px;
+}
+
+.skills__box{
+    display: flex;
+    padding: 5px;
+    gap: 0 20px;
+    
+}
+.skills__subtitle{
+    width: 70px;
+}
+.skills__dot-box{
+    
+    display: flex;
+    gap: 0 5px;
+    position: relative;
+    top: 3px;
+}
+.info__contacts{
+    align-self: self-end;
+}
+
 .contacts{
     grid-column: 1/3;
+    
 }
-.contacts__title{
-    margin-bottom: 30px;
-}
+
 .contacts__data{ 
     display: flex;
     justify-content: space-between;
+    
 }
 
 .footer {
+    
     background-color:#85bcc1;
     display: flex;
     justify-content: space-between;
@@ -154,3 +197,5 @@ body {
     display: inline-block;
 
 }
+
+
